Fix a bug in Field.java